# codenames-agent

./: .gitignore  helpers.py  hyperparameters.yaml  pyproject.toml  training.py
data_utils/: dataloader  dataloader.py  words  words.py
models/: autoencoder.py  embedding.py  model.py  schedulers.py  transformer.py
words/: filtered_nouns.txt  filtered_vocab.txt
