[tool.poetry]
name = "codenames"
version = "0.1.0"
description = "Self-supervised model to play the board game \"Codenames\" optimally"
authors = ["arshkon <arshkon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
gensim = "^4.3.3"
pandas = "^2.2.2"
tensorboard = "^2.17.0"
wandb = "^0.17.5"
lightning = "^2.3.3"
plotly = "^5.23.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
